Package Name Change

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Thecodebunny\\ShopwareApiTest\\": "tests/"
+            "Thecodebunny\\ShopwareApiTest": "tests/"
         }
     },
     "scripts": {
